# TIDAL-Discord-Rich-Presence-UNOFFICIAL

./: .gitignore  .travis.yml  CMakeLists.txt  CNAME  LICENSE  README.md  _config.yml  appveyor.yml  httplib.hh  json.hh  main.cc  main.py  osx_api_hook.hh  requirements.txt  resource.rc  resources.qrc  windows_api_hook.hh
.github/: FUNDING.yml
assets/: icon.icns
discord-game-sdk/c/: discord_game_sdk.h
discord-rpc/osx-dynamic/include/: discord_rpc.h
discord-rpc/win64-dynamic/include/: discord_rpc.h
discord-rpc/win64-static/include/: discord_register.h
